Dataframes created for the statistical analysis.

--- a/Kevin_Traffic.ipynb
+++ b/Kevin_Traffic.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "c70f58b0",
    "metadata": {},
    "outputs": [
@@ -159,18 +159,21 @@
        "[12720 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "traffic_data[[\"County\",\"Crash_Seve\"]]"
+    "county_crash_seve = traffic_data[[\"County\",\"Crash_Seve\"]]\n",
+    "\n",
+    "county_crash_seve = pd.DataFrame(county_crash_seve)\n",
+    "county_crash_seve"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d8e44207",
    "metadata": {},
    "outputs": [
@@ -279,34 +282,139 @@
        "      <td>-115.312353</td>\n",
        "      <td>36.327534</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12715</th>\n",
+       "      <td>CLARK</td>\n",
+       "      <td>PROPERTY DAMAGE ONLY</td>\n",
+       "      <td>12/31/2016</td>\n",
+       "      <td>CLOUDY</td>\n",
+       "      <td>NON-COLLISION</td>\n",
+       "      <td>HAD BEEN DRINKING</td>\n",
+       "      <td>24</td>\n",
+       "      <td>DRY</td>\n",
+       "      <td>DARK - CONTINUOUS LIGHTING</td>\n",
+       "      <td>-115.260731</td>\n",
+       "      <td>36.203052</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12716</th>\n",
+       "      <td>CLARK</td>\n",
+       "      <td>INJURY CRASH</td>\n",
+       "      <td>12/31/2016</td>\n",
+       "      <td>CLEAR</td>\n",
+       "      <td>NON-COLLISION</td>\n",
+       "      <td>FELL ASLEEP, FAINTED, FATIGUED, ETC.</td>\n",
+       "      <td>68</td>\n",
+       "      <td>DRY</td>\n",
+       "      <td>DAYLIGHT</td>\n",
+       "      <td>-115.329666</td>\n",
+       "      <td>36.239294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12717</th>\n",
+       "      <td>CLARK</td>\n",
+       "      <td>INJURY CRASH</td>\n",
+       "      <td>12/31/2016</td>\n",
+       "      <td>CLOUDY</td>\n",
+       "      <td>REAR-END</td>\n",
+       "      <td>APPARENTLY NORMAL</td>\n",
+       "      <td>65</td>\n",
+       "      <td>DRY</td>\n",
+       "      <td>DARK - CONTINUOUS LIGHTING</td>\n",
+       "      <td>-115.322318</td>\n",
+       "      <td>36.218215</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12718</th>\n",
+       "      <td>CLARK</td>\n",
+       "      <td>INJURY CRASH</td>\n",
+       "      <td>12/31/2016</td>\n",
+       "      <td>CLOUDY</td>\n",
+       "      <td>ANGLE</td>\n",
+       "      <td>HAD BEEN DRINKING</td>\n",
+       "      <td>46</td>\n",
+       "      <td>DRY</td>\n",
+       "      <td>DARK - CONTINUOUS LIGHTING</td>\n",
+       "      <td>-115.251390</td>\n",
+       "      <td>36.240358</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12719</th>\n",
+       "      <td>CLARK</td>\n",
+       "      <td>PROPERTY DAMAGE ONLY</td>\n",
+       "      <td>12/31/2016</td>\n",
+       "      <td>CLOUDY</td>\n",
+       "      <td>NON-COLLISION</td>\n",
+       "      <td>APPARENTLY NORMAL</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-115.242232</td>\n",
+       "      <td>36.251773</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>12720 rows × 11 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "  County            Crash_Seve  Crash_Date Weather     Crash_Type  \\\n",
-       "0  CLARK  PROPERTY DAMAGE ONLY  01/01/2016   CLEAR       REAR-END   \n",
-       "1  CLARK          INJURY CRASH  01/01/2016   CLEAR  NON-COLLISION   \n",
-       "2  CLARK  PROPERTY DAMAGE ONLY  01/01/2016   CLEAR  NON-COLLISION   \n",
-       "3  CLARK  PROPERTY DAMAGE ONLY  01/01/2016   CLEAR  NON-COLLISION   \n",
-       "4  CLARK  PROPERTY DAMAGE ONLY  01/01/2016   CLEAR  NON-COLLISION   \n",
+       "      County            Crash_Seve  Crash_Date Weather     Crash_Type  \\\n",
+       "0      CLARK  PROPERTY DAMAGE ONLY  01/01/2016   CLEAR       REAR-END   \n",
+       "1      CLARK          INJURY CRASH  01/01/2016   CLEAR  NON-COLLISION   \n",
+       "2      CLARK  PROPERTY DAMAGE ONLY  01/01/2016   CLEAR  NON-COLLISION   \n",
+       "3      CLARK  PROPERTY DAMAGE ONLY  01/01/2016   CLEAR  NON-COLLISION   \n",
+       "4      CLARK  PROPERTY DAMAGE ONLY  01/01/2016   CLEAR  NON-COLLISION   \n",
+       "...      ...                   ...         ...     ...            ...   \n",
+       "12715  CLARK  PROPERTY DAMAGE ONLY  12/31/2016  CLOUDY  NON-COLLISION   \n",
+       "12716  CLARK          INJURY CRASH  12/31/2016   CLEAR  NON-COLLISION   \n",
+       "12717  CLARK          INJURY CRASH  12/31/2016  CLOUDY       REAR-END   \n",
+       "12718  CLARK          INJURY CRASH  12/31/2016  CLOUDY          ANGLE   \n",
+       "12719  CLARK  PROPERTY DAMAGE ONLY  12/31/2016  CLOUDY  NON-COLLISION   \n",
        "\n",
-       "          V1_Driver1  V1_Driver_ Factors_Ro                    Lighting  \\\n",
-       "0  APPARENTLY NORMAL          49        DRY                    DAYLIGHT   \n",
-       "1  HAD BEEN DRINKING          22        DRY          DARK - NO LIGHTING   \n",
-       "2  HAD BEEN DRINKING          22        DRY  DARK - CONTINUOUS LIGHTING   \n",
-       "3                NaN           0        WET        DARK - SPOT LIGHTING   \n",
-       "4  APPARENTLY NORMAL          27        DRY          DARK - NO LIGHTING   \n",
+       "                                 V1_Driver1  V1_Driver_ Factors_Ro  \\\n",
+       "0                         APPARENTLY NORMAL          49        DRY   \n",
+       "1                         HAD BEEN DRINKING          22        DRY   \n",
+       "2                         HAD BEEN DRINKING          22        DRY   \n",
+       "3                                       NaN           0        WET   \n",
+       "4                         APPARENTLY NORMAL          27        DRY   \n",
+       "...                                     ...         ...        ...   \n",
+       "12715                     HAD BEEN DRINKING          24        DRY   \n",
+       "12716  FELL ASLEEP, FAINTED, FATIGUED, ETC.          68        DRY   \n",
+       "12717                     APPARENTLY NORMAL          65        DRY   \n",
+       "12718                     HAD BEEN DRINKING          46        DRY   \n",
+       "12719                     APPARENTLY NORMAL           0        NaN   \n",
        "\n",
-       "            X          Y  \n",
-       "0 -115.296856  36.282588  \n",
-       "1 -115.305960  36.313917  \n",
-       "2 -115.266269  36.279880  \n",
-       "3 -115.283121  36.278732  \n",
-       "4 -115.312353  36.327534  "
+       "                         Lighting           X          Y  \n",
+       "0                        DAYLIGHT -115.296856  36.282588  \n",
+       "1              DARK - NO LIGHTING -115.305960  36.313917  \n",
+       "2      DARK - CONTINUOUS LIGHTING -115.266269  36.279880  \n",
+       "3            DARK - SPOT LIGHTING -115.283121  36.278732  \n",
+       "4              DARK - NO LIGHTING -115.312353  36.327534  \n",
+       "...                           ...         ...        ...  \n",
+       "12715  DARK - CONTINUOUS LIGHTING -115.260731  36.203052  \n",
+       "12716                    DAYLIGHT -115.329666  36.239294  \n",
+       "12717  DARK - CONTINUOUS LIGHTING -115.322318  36.218215  \n",
+       "12718  DARK - CONTINUOUS LIGHTING -115.251390  36.240358  \n",
+       "12719                         NaN -115.242232  36.251773  \n",
+       "\n",
+       "[12720 rows x 11 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,12 +431,13 @@
     "                                   \"Lighting\",\n",
     "                                   \"X\",\n",
     "                                   \"Y\"]].copy()\n",
-    "clean_traffic_data.head(5)"
+    "clean_traffic_data = pd.DataFrame(clean_traffic_data)\n",
+    "clean_traffic_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "82259fe1",
    "metadata": {},
    "outputs": [
@@ -430,7 +539,7 @@
        "2 -115.266269  36.279880  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "7e62c050",
    "metadata": {},
    "outputs": [
@@ -585,7 +694,7 @@
        "6  DARK - CONTINUOUS LIGHTING -115.146042  36.160959  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "0e14d4c3",
    "metadata": {},
    "outputs": [
@@ -728,7 +837,7 @@
        "UNKNOWN                36.352941     37.0  333.617647  18.265203  4.429962"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "id": "4b04de80",
    "metadata": {},
    "outputs": [
@@ -887,7 +996,7 @@
        "UNKNOWN                36.35   37.0  333.62  18.27  4.43"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "id": "fc713534",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1175,7 @@
        "UNKNOWN                                 36.34    35.0  193.59  13.91  2.46"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "ab873682",
    "metadata": {},
    "outputs": [
@@ -1481,7 +1590,7 @@
        "PHYSICAL IMPAIRMENT: OTHER IMPROPER DRIVING           NaN    NaN  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1493,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "id": "e5ee2a39",
    "metadata": {},
    "outputs": [
@@ -1561,7 +1670,7 @@
        "WET              35.06    31.0  232.94  15.26  0.51"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1572,22 +1681,6 @@
     "Road_by_age = Road_by_age.drop(labels=[\"ICE\",\"OTHER\"],axis=0,inplace=False)\n",
     "Road_by_age\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "id": "f717061f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "702025c9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
