Conclusion and reccomendations have been added

--- a/Kevin_ver2.ipynb
+++ b/Kevin_ver2.ipynb
@@ -5,7 +5,7 @@
    "id": "33f697e4",
    "metadata": {},
    "source": [
-    "Analysis of 2016 Clark County, Nevada Traffic Accidents \n",
+    "**Analysis of 2016 Clark County, Nevada Traffic Accidents** \n",
     "1.  Time of Accidents:\n",
     "    Analysis: The analysis indicates that most accidents occur during the day. This time period shows a spike in accident frequency, suggesting factors like increased traffic may contribute.\n",
     "    Correlation: A significant correlation was found between the time of day and accident frequency. Day hours, which does not include dawn or dusk.\n",
@@ -44,17 +44,26 @@
     "    Analysis: Common types of crashes are identified, showing which types occur most frequently.\n",
     "    Numbers: Rear-end collisions were the most common, making up 40% of all accidents, followed by angle collisions at 35%, and non-collisions at 16%.\n",
     "\n",
-    "    Conclusions:\n",
+    "    **Conclusions:**\n",
+    "\n",
     "    • 12,720 total accidents reported \n",
+    "\n",
     "    • 9,694 accidents with complete reports analyzed for this report \n",
-    "    • 7,947 sober drivers involved in accidents \n",
+    "\n",
+    "    • 7,947 sober drivers involved in accidents\n",
+    "\n",
     "    • 1,747 impaired driver related accidents \n",
+    "\n",
     "    • 44 fatal accidents\n",
     "\n",
-    "    Recommendations\n",
-    "    • Traffic control devices: Speed bumps, bump outs, traffic circles, etc.  \n",
+    "    **Recommendations:**\n",
+    "\n",
+    "    • Traffic control devices: Speed bumps, bump outs, traffic circles, etc.\n",
+    "\n",
     "    • Law enforcement patrols and presence \n",
+    "\n",
     "    • Use AI technology to control traffic flows \n",
+    "    \n",
     "    • For government accident data collection, include drivers’ speed and \n",
     "      posted speed limits, use bucketed libraries of pull downs to allow for \n",
     "      greater data integration and alignment\n"
